# python

./: .env  README.md  main.py  pyproject.toml  requirements.sh  requirements.txt  weather.py
kdb/: README.md  q.py  test.q
